; ModuleID = '/home/carl/AnghaBench/libevent/extr_event_tagging.c_decode_int64_internal.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event_tagging.c_decode_int64_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.evbuffer*, i32)* @decode_int64_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_int64_internal(i32* %0, %struct.evbuffer* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.evbuffer*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.evbuffer* %1, %struct.evbuffer** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.evbuffer*, %struct.evbuffer** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @DECODE_INT_INTERNAL(i32 %9, i32 16, i32* %10, %struct.evbuffer* %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  ret i32 %14
}

declare dso_local i32 @DECODE_INT_INTERNAL(i32, i32, i32*, %struct.evbuffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
